# squid-proxy-creator

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  e myalias  e myalias>end>  entrypoint.sh  go.mod  go.sum  main.go  proxy.db  proxy_config.db  squid.conf  squid.conf.orig  squid.main.conf  whitelist.txt
api/: db.go  endpoints.go
migrations/2020-02-14-111341_proxy_config/: down.sql  up.sql
squid/: squid1.conf
src/: db.rs  endpoints.rs  main.rs  models.rs  schema.rs
